<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        android:layout_height="match_parent">

    <ProgressBar
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:indeterminateTint="@color/purple_200"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_gray"
        android:padding="10dp"
        android:text="@string/inputs_energy_assessment"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atFuelsUsed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fuels_used"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalBuildArea"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            android:hint="@string/total_build_area"
            app:startIconContentDescription="@string/total_build_area">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalNoBuilding"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            android:hint="@string/total_no_building"
            app:startIconContentDescription="@string/total_no_building">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalNoFloors"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            android:hint="@string/total_no_floors"
            app:startIconContentDescription="@string/total_no_floors">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalNoWindows"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            android:hint="@string/total_no_windows"
            app:startIconContentDescription="@string/total_no_windows">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalNoOfAc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            android:hint="Total number of AC in facility"
            app:startIconContentDescription="Total number of AC in facility">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalInstalledAc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            android:hint="@string/total_installed_ac"
            app:startIconContentDescription="@string/total_installed_ac">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/estmetedHotWatar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            android:hint="@string/estimated_hot_water"
            app:startIconContentDescription="@string/estimated_hot_water">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atThermostatic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/availabilty_thermostatic"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atFanSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fan_speed"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atBulbsOlder5Years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bulbs"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atEquipments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/electrial_equipments"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atRoomsEnough"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rooms_enough_options"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atOccuSensors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/occupancy_sensors"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atElectEquipments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/proper_labelling"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atFreezers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/refrigerators_freezers"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atInsulatedWell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insulated_well"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atLoadParrelol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/load_in_parallel"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atEnergyUsage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/energy_usage"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atEfficiency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/efficiency"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atCircuits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/circuits"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/atHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/humidity"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/tvNextEnergy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:background="@drawable/bg_green_corner_10"
                android:gravity="center_horizontal"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/next"
                android:textAlignment="center"
                android:textDirection="locale"
                android:textColor="@color/white" />
            <ProgressBar
                android:id="@+id/ProgressBar1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:layout_margin="15dp"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                style="?android:attr/progressBarStyleLarge"
                android:progress="50"/>
        </RelativeLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>