<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/bg_white_10"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="7dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textDirection="locale"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </RelativeLayout>


            <TextView
                fontPath="@string/font_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:textDirection="locale"
                android:textAlignment="center"
                android:text="@string/dialog_permission_message"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            style="@style/logout_button"
            android:text="OK"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/tvok"
            android:textDirection="locale"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>